import mongoose, { Types } from 'mongoose'

export interface SportCategory {
    _id?: Types.ObjectId
    name: string
    icon: string
    type: 'Ngoài trời' | 'Trong nhà'
    kcal_per_unit: number // kcal/km (Ngoài trời) hoặc kcal/phút (Trong nhà)
    stravaTypes?: string[] // Strava activity types: ['Run', 'Walk', 'TrailRun', ...]
    isDeleted?: boolean
    deletedAt?: Date
    createdAt?: Date
    updatedAt?: Date
}

const SportCategorySchema = new mongoose.Schema<SportCategory>(
    {
        name: { type: String, required: true },
        icon: { type: String, default: 'sport' },
        type: { type: String, enum: ['Ngoài trời', 'Trong nhà'], required: true },
        kcal_per_unit: { type: Number, default: 0, min: 0 },
        stravaTypes: [{ type: String }],
        isDeleted: { type: Boolean, default: false },
        deletedAt: { type: Date, default: null }
    },
    {
        timestamps: true,
        collection: 'sport_categories'
    }
)

const SportCategoryModel = mongoose.model('SportCategory', SportCategorySchema)

export default SportCategoryModel
